# purple-agent-build-what-i-say

./: .gitignore  PURPLE_AGENT_CONTEXT.txt  README.md  RUN_INSTRUCTIONS.md  improvement.md
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
build_what_i_mean/: .env.template  .gitignore  README.md
build_what_i_mean/pragmatic_builder/: green_agent.py  scenario_openai_purple.toml  test_purple.py
build_what_i_mean/pragmatic_builder/agentbeats/: client.py  question_answerer.py
build_what_i_mean/pragmatic_builder/purple_openai/: prompts.py  state.py
purple_agent/: .env.example  .gitignore  Dockerfile  README.md  agent.py  amber-manifest.json5  prompts.py  pyproject.toml  server.py  state.py  validators.py
purple_agent/.github/workflows/: publish.yml
purple_agent/tests/: __init__.py  test_purple.py
purple_openai/: Dockerfile  README.md  agent.py  server.py  validators.py
qwen-model-inference/: aimo3-qwen3-5-27b-vllm-tir.ipynb  gelab-4B-preview-ngrok-server-kaggle.ipynb  qwen-3-5-27b-ngrok-notebook.ipynb
